Stying | Timer - Fixed Icon / Text Vertical Alignment

--- a/src/styles/sass/components/game/KanaMemoryGame.module.scss
+++ b/src/styles/sass/components/game/KanaMemoryGame.module.scss
@@ -117,7 +117,7 @@
 
   .timer {
     @include timer;
-    font-size: 1em;
+    font-size: 0.95em;
   }
 
   .romajiDisplay {
